[tool.poetry]
name = "pyDichroX"
version = "0.2.0"
description = "A program to analyse XAS data"
authors = ["BeppeC <beppec@vivaldi.net>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
importlib = "^1.0.4"
numpy = "^1.20.2"
scipy = "^1.6.3"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
easygui = "^0.98.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
